# sp0ky

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
src/: api.rs  classifier.rs  handler.rs  main.rs  parser.rs  store.rs
