[package]
name = "sp0ky"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
pnet = "0.28.0"
byteorder = "1.4.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
lazy_static = "1.4.0"
actix-web = "3"